@@ -42,6 +42,7 @@
 - Fix: [#20016] The group box for small scenery details in the Tile Inspector window has unused empty space.
 - Fix: [#20018] Shops not calculating up-keep cost.
 - Fix: [#20033] Asset packs cannot reference game data.
+- Fix: [#20104] [Plugin] Some network APIs use player index and group index.
 
 0.4.4 (2023-03-28)
 ------------------------------------------------------------------------
